compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__unicode1.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 5
expression: "\npub fn emoji() -> String {\n  \"\\u{1f600}\"\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([emoji/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec emoji() -> binary().
emoji() ->
    <<"\x{1f600}"/utf8>>.
