compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__unicode3.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn y_with_dieresis_with_slash() -> String {\n  \"\\\\\\u{0308}y\"\n}\n"
---
----- SOURCE CODE

pub fn y_with_dieresis_with_slash() -> String {
  "\\\u{0308}y"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([y_with_dieresis_with_slash/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec y_with_dieresis_with_slash() -> binary().
y_with_dieresis_with_slash() ->
    <<"\\\x{0308}y"/utf8>>.
