compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__unicode_concat3.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 49
expression: "\npub fn main(x) -> String {\n  x ++ \"\\\\\\u{0308}\"\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(binary()) -> binary().
main(X) ->
    <<X/binary, "\\\x{0308}"/utf8>>.
