compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__unicode_escape_sequence_6_digits.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 95
expression: "\npub fn unicode_escape_sequence_6_digits() -> String {\n  \"\\u{10abcd}\"\n}\n"
---
----- SOURCE CODE

pub fn unicode_escape_sequence_6_digits() -> String {
  "\u{10abcd}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([unicode_escape_sequence_6_digits/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec unicode_escape_sequence_6_digits() -> binary().
unicode_escape_sequence_6_digits() ->
    <<"\x{10abcd}"/utf8>>.
